--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -1,5 +1,3 @@
-/*ASU Gold: #FFC627, Light Gold: #FFE5B3, ASU Maroon: #8C1D40  */
-/*UNC Bears Gold: #F6B000, Butter: #F5E3B1, UNC Bears Blue: #013C65 */
 body {
 	font: 100% "Lucida Grande", "Lucida Sans Unicode", verdana, geneva, sans-serif;
 	word-spacing:2px;
@@ -48,7 +46,7 @@ body {
 }
 
 #header input:focus {
-	border:2px solid #F6B000;
+	border:2px solid #FFC627;
 	color:#555;
 }
 
@@ -65,7 +63,7 @@ body {
 #header h1 {
 	float:center;
 	font:350% Georgia;
-	color:#013C65;
+	color:#8C1D40;
 	padding:5px 20px 5px 5px;
 	
 	margin:0 20px 0 0;
@@ -99,11 +97,11 @@ body {
 
 #header #nav {
 	clear:both;
-	background:url(../1_Images/nav.png) top repeat-x #F6B000;
-	border-bottom:2px solid #F6B000;
-	border-top:2px solid #F6B000;
-	border-left:2px solid #F6B000;
-	border-right:2px solid #F6B000;
+	background:url(../1_Images/nav.png) top repeat-x #FFC627;
+	border-bottom:2px solid #FFC627;
+	border-top:2px solid #FFC627;
+	border-left:2px solid #FFC627;
+	border-right:2px solid #FFC627;
 	padding:10px 10px 10px 0 !important;
 	padding:4px 10px 10px 0;
 }
@@ -114,18 +112,18 @@ body {
 }
 
 #header #nav a {
-	color:#013C65;
+	color:#8C1D40;
 	font:125% Trebuchet MS;
 	text-decoration:none;
 	padding:10px;
 }
 
 #header #nav a:hover {
-	background:#F5E3B1;
+	background:#FFE5B3;
 }
 
 #header #nav a.active {
-	background:#F5E3B1;
+	background:#FFE5B3;
 }
 
 #header #nav li {
@@ -135,13 +133,13 @@ body {
 }
 
 #header #subnav {
-	background:#F5E3B1;
+	background:#FFE5B3;
 	padding:5px 7px 7px 7px;
 	font:90% Verdana;
-	color:#013C65;
-	border-bottom:2px solid #F5E3B1;
-	border-left:2px solid #F5E3B1;
-	border-right:2px solid #F5E3B1;
+	color:#8C1D40;
+	border-bottom:2px solid #FFE5B3;
+	border-left:2px solid #FFE5B3;
+	border-right:2px solid #FFE5B3;
 }
 
 #header #subnav li {
@@ -150,21 +148,21 @@ body {
 }
 
 #header #subnav a {
-	color:#013C65;
+	color:#8C1D40;
 	text-decoration:none;
 	font:100% Verdana;
 	padding:5px;
-	border-bottom:2px solid #F5E3B1;
+	border-bottom:2px solid #FFE5B3;
 }
 
 #header #subnav a:hover {
-	border-bottom:2px solid #013C65;
-	color:#013C65;
+	border-bottom:2px solid #8C1D40;
+	color:#8C1D40;
 }
 
 #header #subnav a.active {
-	border-bottom:2px solid #013C65;
-	color:#013C65;
+	border-bottom:2px solid #8C1D40;
+	color:#8C1D40;
 }
 
 
@@ -184,7 +182,7 @@ body {
 }
 
 #sidebar h3 {
-	color:#F6B000;
+	color:#FFC627;
 	font:100% Verdana;
 	font-weight:bold;
 	letter-spacing:1px;
@@ -200,7 +198,7 @@ body {
 }
 
 #sidebar p.news a.more {
-	color:#F6B000;
+	color:#FFC627;
 	display:block;
 	text-align:right;
 	font:80% Verdana;
@@ -211,7 +209,7 @@ body {
 }
 
 #sidebar p.news a:hover {
-	color:#013C65;
+	color:#8C1D40;
 }
 
 #sidebar .subnav {
@@ -316,25 +314,25 @@ p {
 
 h2 {
 	font:190% Arial;
-	color:#013C65;
-	border-bottom:2px solid #F6B000;
+	color:#8C1D40;
+	border-bottom:2px solid #FFC627;
 }
 
 h2 a {
-	color:#013C65;
+	color:#8C1D40;
 	text-decoration:none;
 }
 
 h2 a:hover {
-	color:#013C65;
+	color:#8C1D40;
 }
 h3 {
-    color:#013C65;
+    color:#414141;
     }
 
 h4 {
     font:190% Arial;
-    color:#013C65;
+    color:#8C1D40;
 }
 
 #footer {
@@ -364,7 +362,7 @@ h3 {
 	padding:15px 0 15px 15px;
 	border-top:1px solid #eee;
 	border-bottom:1px solid #eee;
-	color:#013C65;
+	color:#8C1D40;
 }
 #content ul span {
 	color:#444;
@@ -375,7 +373,7 @@ h3 {
 	padding:15px 0;
 	border-top:1px solid #eee;
 	border-bottom:1px solid #eee;
-	color:#013C65;
+	color:#8C1D40;
 }
 #contentnorightbar ul span {
 	color:#444;
@@ -386,7 +384,7 @@ h3 {
 	padding:15px 0 15px 15px;
 	border-top:1px solid #eee;
 	border-bottom:1px solid #eee;
-	color:#013C65;
+	color:#8C1D40;
 }
 #contentnobars ul span {
 	color:#444;
@@ -394,7 +392,7 @@ h3 {
 img {
 	padding:1px;
 	background:#FFF;
-	border:2px solid #013C65;
+	border:2px solid #8C1D40;
 }
 
 form {
@@ -405,25 +403,25 @@ form {
 label {
 	display:block;
 	font-weight:bold;
-	color:#013C65;
+	color:#8C1D40;
 	margin:5px 0;
 
 }
 input {
 	width:300px;
 	padding:4px;
-    background:#013C65;
+    background:#8C1D40;
 	border:none;
-	border-bottom:1px dotted #013C65;
+	border-bottom:1px dotted #8C1D40;
 	font:120% Verdana;
-	color:#F6B000;
+	color:#FFC627;
 }
 
 textarea {
 	width:400px;
 	padding:4px;
 	font:120% Verdana;
-	border:1px solid #F6B000;
+	border:1px solid #FFC627;
 	height:200px;
 	display:block;
 	color:#000000;
@@ -442,11 +440,11 @@ blockquote p {
 }
 .bodylinks {
 FONT-WEIGHT: bold;
-COLOR: #013C65;
+COLOR: #8C1D40;
 TEXT-DECORATION: underline;
 }
 .coloredlinks{
-COLOR: #013C65;
+COLOR: #8C1D40;
 }
 .noborder{
 border:none;
