--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -1,3 +1,12 @@
+/*
+Color Choices
+Nittany Navy: #001E44
+Pennsylvania Sky: #009CDE
+Pugh Blue: #96BEE6
+Don't forget to update 1_Images/nav.png
+
+*/
+
 body {
 	font: 100% "Lucida Grande", "Lucida Sans Unicode", verdana, geneva, sans-serif;
 	word-spacing:2px;
