--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -72,6 +72,12 @@ body {
 	border:none;
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+	margin-top: 0;
+  	margin-bottom: 0.5rem;
+	font-weight: 400;
+}
+
 #header h1 {
 	font-size:3.5rem;
 	color: var(--nttany-navy);
