--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -73,7 +73,7 @@ body {
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-	margin-top: 0;
+	margin-top: 0.25rem;
   	margin-bottom: 0.5rem;
 	font-weight: 400;
 }
