--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -7,6 +7,7 @@
 	--pugh-blue: 		#96BEE6;
 	--futures-calling:	#99CC00;
 	--stately-atherton:	#AC8DCE;
+	--green-opportunity: #008755;
 }
 
 html {
@@ -342,7 +343,7 @@ input[type='checkbox'] {
 }
 
 .lbl-toggle::before {
-  content: ' ';
+  content: '';
   display: inline-block;
 
   border-top: 5px solid transparent;
@@ -375,9 +376,57 @@ input[type='checkbox'] {
 }
 
 .collapsible-content .content-inner {
-  background: var(--futures-calling);
-  border-bottom: 1px solid rgba(250, 224, 66, .45);
+  background: white;
+  border: 2px solid var(--green-opportunity);
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
   padding: .5rem 1rem 0.5rem 2rem;
 }
+
+.tg  {
+	border-collapse:collapse;border-spacing:0;
+}
+
+.tg td {
+	border-color:black;
+	border-style:solid;
+	border-width:1px;
+	overflow:hidden;
+	padding:10px 5px;
+	word-break:normal;
+}
+
+.tg th {
+	border-color:black;
+	border-style:solid;
+	border-width:1px;
+	overflow:hidden;
+	padding:10px 5px;
+	word-break:normal;
+}
+
+.tg .tg-bobw {
+	font-weight:bold;
+	text-align:center;
+	vertical-align:bottom;
+}
+
+.tg .tg-wa1i {
+	font-weight:bold;
+	text-align:center;
+	vertical-align:middle;
+}
+
+.tg .tg-0lax{
+	text-align:left;
+	vertical-align:top;
+}
+
+.tg .tg-nrix{
+	text-align:center;
+	vertical-align:middle;
+}
+
+
