--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -429,4 +429,8 @@ input[type='checkbox'] {
 	vertical-align:middle;
 }
 
-
+.gsc-input {
+    font-size: 16px;
+    background: white;
+    color: black;
+}
