--- a/1_Scripts/neil.css
+++ b/1_Scripts/neil.css
@@ -254,6 +254,14 @@ a:hover {
 	border-bottom:1px solid #eee;
 	/*color:var(--nittany-navy);*/
 }
+#contentnobars ol {
+	margin:15px 0 15px 0;
+	line-height:25px;
+	padding:15px 0 15px 15px;
+	border-top:1px solid #eee;
+	border-bottom:1px solid #eee;
+	/*color:var(--nittany-navy);*/
+}
 #contentnobars ul span {
 	color:#444;
 }
